# pulpkit

./: .gitignore  404.html  CLAUDE.md  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
architecture/overview/: index.html
architecture/protocols/: index.html
architecture/state-fields/: index.html
architecture/surfaces/: index.html
architecture/watchers/: index.html
crates/pulpkit-core/: Cargo.toml
crates/pulpkit-core/src/: dirty.rs  event_loop.rs  events.rs  hover.rs  ipc.rs  lib.rs  main.rs  popups.rs  runtime.rs  setup.rs  surfaces.rs  theme.rs  timers.rs  watcher.rs
crates/pulpkit-layout/: Cargo.toml
crates/pulpkit-layout/src/: animation.rs  damage.rs  diff.rs  element.rs  flex.rs  lib.rs  paint.rs  style.rs  theme.rs  tree.rs
crates/pulpkit-lua/: Cargo.toml
crates/pulpkit-lua/src/: bridge.rs  element.rs  lib.rs  msg.rs  signals.rs  subscribe.rs  system.rs  timers.rs  vm.rs  widgets.rs  window.rs
crates/pulpkit-plugin/: Cargo.toml
crates/pulpkit-plugin/src/: lib.rs  loader.rs
crates/pulpkit-reactive/: Cargo.toml
crates/pulpkit-reactive/src/: batch.rs  computed.rs  effect.rs  lib.rs  runtime.rs  scope.rs  signal.rs  value.rs
crates/pulpkit-render/: Cargo.toml
crates/pulpkit-render/src/: canvas.rs  color.rs  image.rs  lib.rs  text.rs
crates/pulpkit-sub/: Cargo.toml
crates/pulpkit-sub/src/: exec.rs  ipc.rs  lib.rs  manager.rs  stream.rs
crates/pulpkit-wayland/: Cargo.toml
crates/pulpkit-wayland/examples/: test_surface.rs
crates/pulpkit-wayland/src/: activation.rs  client.rs  data_control.rs  foreign_toplevel.rs  idle.rs  idle_notify.rs  input.rs  lib.rs  output.rs  output_management.rs  screencopy.rs  session_lock.rs  surface.rs  virtual_keyboard.rs
docs/: index.md
docs/architecture/: overview.md  protocols.md  state-fields.md  surfaces.md  watchers.md
docs/getting-started/: first-shell.md  installation.md  quickstart.md
docs/reference/: commands.md  config.md  dbus.md  mcp.md  state-fields.md
docs/shell-dev/: commands.md  lock-screen.md  state-api.md  structure.md  themes.md  toasts.md
docs/zenith/: customization.md  index.md  panels.md
examples/hello/: lib.lua  shell.lua  theme.lua
examples/interactive/: shell.lua  theme.lua
examples/minimal/: shell.lua
examples/shell/: shell.lua  theme.lua
getting-started/first-shell/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mcp/: Cargo.toml
mcp/src/: api_docs.md  main.rs
poc/: Cargo.toml
poc/shells/glass/: bar.html  popup.html
poc/shells/gruvbox-rice/: bar.html  config.json  popup.html
poc/shells/gruvbox-rice/components/: clock.js  status.js  taskbar.js  tray.js  workspaces.js
poc/shells/gruvbox-rice/panels/: config.js  launcher.js  power.js  settings.js  wifi.js
poc/shells/minimal/: bar.html  config.json  popup.html
poc/shells/neon/: bar.html  config.json  popup.html
poc/shells/zenith/: bar-preview.html  bar.html  config.json  lock.html  popup-preview.html  popup.html  preview.html  theme.css  toast.html
poc/shells/zenith/components/: clock.js  status.js  taskbar.js  tray.js  workspaces.js
poc/shells/zenith/panels/: config.js  launcher.js  power.js  settings.js  wifi.js
poc/src/: bar.html  greetd.rs  icons.rs  ipc.rs  main.rs  pam.rs  poll.rs  popup.html  state.rs
poc/src/watchers/: ac_power.rs  audio.rs  audio_devices.rs  audio_streams.rs  bluetooth.rs  brightness.rs  caffeine.rs  calendar.rs  clipboard.rs  compositor.rs  containers.rs  dbus_service.rs  discord.rs  fan.rs  focus_tracker.rs  gamemode.rs  gamescope.rs  gpu.rs  inhibitors.rs  input_method.rs  journal.rs  keyboard.rs  load_avg.rs  logind.rs  mic.rs  mod.rs  mpris.rs  net_speed.rs  network.rs  night_light.rs  niri.rs  notifications.rs  outputs.rs  packagekit.rs  polkit.rs  power_draw.rs  power_profiles.rs  recent_files.rs  screen_share.rs  ssh_sessions.rs  (+14 more)
reference/commands/: index.html
reference/config/: index.html
reference/dbus/: index.html
reference/mcp/: index.html
reference/state-fields/: index.html
search/: search_index.json
shell/: shell.lua  theme.lua
shell-dev/commands/: index.html
shell-dev/lock-screen/: index.html
shell-dev/state-api/: index.html
shell-dev/structure/: index.html
shell-dev/themes/: index.html
shell-dev/toasts/: index.html
zenith/: index.html
zenith/customization/: index.html
zenith/panels/: index.html
(+18 files in other folders)
