[workspace]
resolver = "2"
members = [
    "crates/pulpkit-render",
    "crates/pulpkit-layout",
    "crates/pulpkit-wayland",
    "crates/pulpkit-lua",
    "crates/pulpkit-sub",
    "crates/pulpkit-core",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
pulpkit-render = { path = "crates/pulpkit-render" }
pulpkit-layout = { path = "crates/pulpkit-layout" }
pulpkit-wayland = { path = "crates/pulpkit-wayland" }
pulpkit-lua = { path = "crates/pulpkit-lua" }
pulpkit-sub = { path = "crates/pulpkit-sub" }
pulpkit-core = { path = "crates/pulpkit-core" }

# Rendering
tiny-skia = "0.11"
fontdb = "0.22"
rustybuzz = "0.20"
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }

# Wayland
smithay-client-toolkit = { version = "0.20", features = ["calloop"] }
wayland-client = "0.31"
wayland-cursor = "0.31"
calloop = "0.14"

# Scripting
mlua = { version = "0.11", features = ["luajit", "vendored"] }

# Layout
taffy = "0.9"

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
