[package]
name = "pulpkit-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pulpkit-render.workspace = true
pulpkit-layout.workspace = true
pulpkit-wayland.workspace = true
pulpkit-lua.workspace = true
pulpkit-sub.workspace = true
calloop.workspace = true
wayland-client.workspace = true
anyhow.workspace = true
mlua.workspace = true
log.workspace = true
env_logger.workspace = true
