[package]
name = "pulpkit-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
smithay-client-toolkit.workspace = true
wayland-client.workspace = true
wayland-cursor.workspace = true
calloop.workspace = true
log.workspace = true
anyhow.workspace = true
